@@ -9,6 +9,8 @@ PHP                                                                        NEWS
 - Filter:
   . Fixed bug #72972 (Bad filter for the flags FILTER_FLAG_NO_RES_RANGE and
     FILTER_FLAG_NO_PRIV_RANGE). (julien)
+  . Fixed bug #67167 (Wrong return value from FILTER_VALIDATE_BOOLEAN,
+    FILTER_NULL_ON_FAILURE). (levim, cmb)
 
 - GD:
   . Fixed bug #67325 (imagetruecolortopalette: white is duplicated in palette).
